레이아웃 변경

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@ layout: default
 title: "소개"
 ---
 
-<div class="pt-5" style="" >
-	<div class="container">
-		<div class="row">
-			<div class="col-md-4 mr-auto order-2 order-md-1"><img class="img-fluid d-block" src="assets/images/logo.jpg"><br> <img class="img-fluid d-block" src="assets/images/church.jpg"> </div>
-			<div class="px-md-5 p-3 d-flex flex-column align-items-start justify-content-center col-md-7 order-1 order-md-2">
-				<p class="mb-3 lead">한국교회사아카데미 자료실 도서검색 시스템입니다.<br>한국교회사와 관련된 20,000여 책의 자료가 소장되어 있습니다.
-</p><a class="btn text-white" style="background:#ff4500" href="{{site.baseurl}}/search">전체목록</a>
-			</div>
-		</div>
-	</div>
-</div>
+<div class="py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 mr-auto order-2 order-md-1"> <img class="img-fluid d-block img-thumbnail" src="assets/images/church.jpg"> </div>
+        <div class="px-md-5 p-3 d-flex flex-column align-items-start justify-content-center col-md-7 order-1 order-md-2">
+          <h1> 한국교회사아카데미 자료실</h1>
+          <p class="mb-3 lead">한국교회사아카데미 자료실 도서검색 시스템입니다.<br>한국교회사와 관련된 20,000여 책의 자료가 소장되어 있습니다.</p>
+        </div>
+      </div>
+    </div>
+  </div>
