--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: "소개"
 <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 mr-auto order-2 order-md-1"> <img class="img-fluid d-block img-thumbnail" src="assets/images/church.jpg"> </div>
+        <div class="col-md-4 mr-auto order-2 order-md-1"> <img class="img-fluid d-block img-thumbnail" src="assets/images/church.png"> </div>
         <div class="px-md-5 p-3 d-flex flex-column align-items-start justify-content-center col-md-7 order-1 order-md-2">
           <h1> 한국교회사아카데미 자료실</h1>
           <p class="mb-3 lead">한국교회사아카데미 자료실 도서검색 시스템입니다.<br>한국교회사와 관련된 20,000여 책의 자료가 소장되어 있습니다.</p>
