--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: "소개"
         <div class="px-md-5 p-3 d-flex flex-column align-items-start justify-content-center col-md-7 order-1 order-md-2">
           <h1> 한국교회사아카데미 자료실</h1>
           <p class="mb-3 lead">한국교회사아카데미 자료실 도서검색 시스템입니다.<br>한국교회사와 관련된 20,000여 책의 자료가 소장되어 있습니다.</p>
+		  <a class="btn text-white" style="background:#760c0c" href="{{site.baseurl}}search">자료검색</a>
         </div>
       </div>
     </div>
